fix: installment tag spacing

--- a/react/components/InstallmentTags/styles.css
+++ b/react/components/InstallmentTags/styles.css
@@ -1,8 +1,5 @@
 .installment-tags {
   display: flex;
   flex-wrap: wrap;
-}
-
-.installment-tags > div {
   gap: 5px;
 }
